changed some methods for tag search